Fix: Spacing on multiple mrt icons

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -119,3 +119,9 @@ body {
     padding-left: 20px;
   }
 }
+
+.poi-wrapper {
+  img {
+    padding-right: 10px;
+  }
+}
